# scripthandler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
script_handler/: __main__.py  app.py
script_handler/git/: git_repository.py  git_service_provider.py  gitlab_service.py
script_handler/handlers/: auth_service.py  edit_handler.py  git_handler.py  gitlab_hook_handler.py  repository_handler.py  schemas_handler.py  script_handler.py  service_handler.py  user_handler.py  utils.py  webhooks_handler.py
script_handler/models/: __init__.py  app_config.py  base_model.py  collections.py  releases.py  repository.py  script.py  service.py  user.py
script_handler/runner/: port_service.py  runner_base.py  runner_factory.py  subprocess_runner.py
script_handler/templates/python/: appconfig.yml  main.py
script_handler/templates/service/: appconfig.yml  main.py
script_handler/templates/streamlit/: appconfig.yml  main.py
streamlit-venv-builder/: build-env.sh  get_extra_packages.sh  requirements.txt
